src/objects/General_Table__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Information 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Table__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Table</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>General Table</label>
    <listViews>
        <fullName>Bank_Names</fullName>
        <columns>NAME</columns>
        <columns>Code_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Table__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>PRS1211</value>
        </filters>
        <label>Bank Names</label>
    </listViews>
    <listViews>
        <fullName>Geo_Codes</fullName>
        <columns>NAME</columns>
        <columns>Code_Description__c</columns>
        <columns>Additional_Information__c</columns>
        <columns>Additional_Information_2__c</columns>
        <columns>Status__c</columns>
        <columns>Table__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>CLM2305</value>
        </filters>
        <label>Geo Codes</label>
    </listViews>
    <listViews>
        <fullName>Program_IDs</fullName>
        <columns>NAME</columns>
        <columns>Code_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Table__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>PRSP</value>
        </filters>
        <label>Program IDs</label>
    </listViews>
    <listViews>
        <fullName>Term_Reasons</fullName>
        <columns>NAME</columns>
        <columns>Code_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Table__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>PRS6</value>
        </filters>
        <label>Term Reasons</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>